--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,32 +5,43 @@ body{
     width: 960px;
     font-size: 18px;
     text-align: center;
-    position: relative;
-    background-image: url("/HW-Wireframe/assets/images/Desert.jpg")
+    /* background-image: url("/HW-Wireframe/assets/images/Desert.jpg") */
 }
 nav{
     background: #ebebeb;
     margin-bottom: 10px;
     padding: 30px;
+    overflow: auto
 }
 section{
     background: #ebebeb;
     width: 495px;
     float: left;
+    overflow: auto;
+    padding: 10px;
+    height: 260px;
 }
 aside{
     background: #ebebeb;
-    width: 495px;
     float: right;
-    padding: 10px
+    overflow: auto;
+    width: 415px;
+    height: 260px;
+    padding-top: 20px;
+    margin-bottom: 10px;
 }
 footer{
     background: #ebebeb;
+    clear: both;
+    padding: 30px
 }
 article{
     color: #ebebeb;
     background: #777;
     width: 495px;
+    overflow: auto;
+    padding: 0.6%;
+    margin-top: 20px;
 }
 h1{
     color: #777;
@@ -38,9 +49,22 @@ h1{
 }
 p{
     color: #777;
-    background: #ebebeb
+    background: #ebebeb;
+    width:400px;
+    height: 50px;
+    margin-left: 50px
 }
 #header{
     padding: 30px;
 
+}
+.realative{
+position: relative;
+left:0
+}
+.absolute{
+position: absolute;
+}
+.center{
+margin: auto; 
 }
